# Mythology-Worldbuilding-Pantheon

./: .gitignore  README.md  main.py  requirements.txt
agents/: base_agent.py  death_agent.py  nature_agent.py  trickster_agent.py  warrior_agent.py  weaver_agent.py  wisdom_agent.py
backend/: .env.example  main.py  pyproject.toml
backend/agents/: nature_agent.py  trickster_agent.py  weaver_agent.py
backend/api/: routes.py
backend/auth/: auth_service.py
backend/auth_db/: connection.py  models.py
backend/orchestration/: collaboration_patterns.py  coordinator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Login.jsx  StoryGenerator.jsx
memory/: lore_database.py
orchestration/: collaboration_patterns.py  coordinator.py
prompts/: agent_prompts.py
